// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remark Conditional should parse Index page kind 1`] = `
"---
title: "test"
---

# typedoc-plugin-remark

## Documents

+ [toc-doc](documents/toc-doc.md)
+ [toc-doc-2](documents/toc-doc-2.md)

## Modules

+ [remark](remark/README.md)

> thanks [**@tgreyuk**](https://github.com/tgreyuk)

## New Index Heading
"
`;

exports[`Remark Conditional should parse README page kind 1`] = `
"# Project README

Some text

## Some heading 2

Some text

+ list item 1
+ list item 2

## Another heading 2

thanks [**@tgreyuk**](https://github.com/tgreyuk)

\`\`\`ts
const x = 1;
\`\`\`

## New Readme Heading
"
`;

exports[`Remark Conditional should parse class page 1`] = `
"---
title: "test"
---

# Class: Class

## Constructors

### Constructor

> **new Class**(): \`Class\`

#### Returns

\`Class\`

## Properties

### a

> **a**: \`string\`

***

### b

> **b**: \`number\`

> thanks [**@tgreyuk**](https://github.com/tgreyuk)
"
`;

exports[`Remark Conditional should parse documents page 1`] = `
"# TOC Document

Some text

## Some heading 2

Some text

## Another heading 2

thanks [**@tgreyuk**](https://github.com/tgreyuk)
"
`;

exports[`Remark Conditional should parse interface page 1`] = `
"---
title: "test"
---

# Interface: Interface

## Properties

### a

> **a**: \`string\`

***

### b

> **b**: \`number\`

> thanks [**@tgreyuk**](https://github.com/tgreyuk)
"
`;

exports[`Remark Simple should parse documents page 1`] = `
"# TOC Document

Some text

## Some heading 2

Some text

## Another heading 2

thanks [**@tgreyuk**](https://github.com/tgreyuk)
"
`;

exports[`Remark Simple should parse modules page 1`] = `
"---
title: "test"
---

# typedoc-plugin-remark

## Documents

* [toc-doc](documents/toc-doc.md)
* [toc-doc-2](documents/toc-doc-2.md)

## Modules

* [remark](remark/README.md)

> thanks [**@tgreyuk**](https://github.com/tgreyuk)
"
`;
